fix: get rid of that silly stuck footer

--- a/css/style.css
+++ b/css/style.css
@@ -43,8 +43,3 @@ body {
 button#reset {
   margin-left: 30px;
 }
-
-footer {
-  position: absolute;
-  bottom: 0;
-}
